<resources>
    <string name="app_name">BIMCalculateApp</string>
    <string name="height">Height</string>
    <string name="_170">170</string>
    <string name="cm">cm</string>
    <string name="calculate_your_bim">Calculate Your BIM</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="bmi_calculate">BMI Calculate</string>
    <string name="gender">Gender</string>
    <string name="your_bmi_category_is">Your BMI Category is</string>
</resources>